# innovation-jam-ops-clone

./: README.md
apps/apple_prediction/: README.md
apps/binary_predict/: README.md  binary_predict.py  pyproject.toml
apps/services/predict_buy_sell/: README.md  predict_buy_sell.py
programs/: applePrediction.py  cmd_arg_practice.py  csv_reader.py  predictStonks.py  predict_buy_sell.py  prediction_testing.py  stock_bg.py  t10LineGraph.py
services/finnhub_data/: finnhub_data.py  pyproject.toml
services/predict_buy_sell/: predict_buy_sell.py  pyproject.toml
services/twitter_data/: pyproject.toml  twitter_data.py
unused_progams/: prediction_testing.py
unused_progams/Cam_Projects/: Celsius_Converter.py  Prime_checker.py  Spongebob_letters.py  While_loop.py
